@@ -286,11 +286,11 @@
                 <!-- 部署实例的数组下标个数-->
                 <deploy.admin.jvm-args>
                     <![CDATA[
-                    -server -Xms4g -Xmx4g -Xmn2g -XX:MaxPermSize=64m -Xverify:none\
+                    -server -Xms4g -Xmx4g -Xmn2g -Xverify:none\
 					-Xss1m -XX:+UseParallelGC -XX:MaxTenuringThreshold=3  -XX:+UseParallelOldGC -XX:+UseAdaptiveSizePolicy -XX:MaxGCPauseMillis=100 -XX:ParallelGCThreads=24\
 					-XX:+UseTLAB -XX:TLABSize=1g -XX:+ResizeTLAB -XX:+PrintTLAB -verbose -XX:+PrintGCApplicationStoppedTime\
 					 -XX:+PrintGCApplicationStoppedTime -XX:+PrintFlagsFinal -Xloggc:/letv/logs/mms/transmission-gc.log\
-					 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath:/letv/logs/mms/increment-dump.log
+					 -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=/letv/logs/mms/increment-dump.log
                   ]]>
                 </deploy.admin.jvm-args>
                 <!-- mms-search-transmission file path -->
